--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -73,3 +73,13 @@
 .toutiao-dianzan2:before {
   content: "\e60f";
 }
+body {
+  background-color: #f5f7f9;
+}
+.van-nav-bar__content {
+  background-color: #3296fa;
+}
+.van-nav-bar__content .van-nav-bar__title,
+.van-nav-bar__content .van-icon::before {
+  color: #fff;
+}
