--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,2 +1,13 @@
 // 加载字体图标样式
 @import './icon.less';
+
+body {
+    background-color: #f5f7f9;
+}
+
+.van-nav-bar__content {
+    background-color: #3296fa;
+    .van-nav-bar__title, .van-icon::before {
+      color: #fff;
+    }
+  }
